# frankenstat-paper-1

./: README.md  add_to_model.py  analysis.py  discovery_os_gx2.py  discovery_utils.py  frankenstat.py  optimization.py  pyproject.toml  simulation.py
slurm/: frankenize.sh  get-all-pvalues.sh  hd-max-like-combined.sh  hd-max-like-franken.sh  hd-max-like-pta-1.sh  hd-max-like-pta-2.sh  hd-max-like-pta-3.sh  launch-all-slurm-jobs.sh  refit-tm-spna-combined.sh  refit-tm-spna-pta-1.sh  refit-tm-spna-pta-2.sh  refit-tm-spna-pta-3.sh  simulate-combined.sh  split-pta.sh  spna-combined.sh  spna-franken.sh  spna-pta-1.sh  spna-pta-2.sh  spna-pta-3.sh  update-noise-dicts-franken.sh
