[project]
authors = [{name = "David Wright", email = "dcw3.dev@gmail.com"}]
name = "frankenstat-likelihood"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
 "cyclopts>=3.22.5,<4",
 "loguru",
 "numpyro>=0.19.0,<0.20",
 "arviz[all,preview]>=0.22.0,<0.23",
 "zarr>=2.18.7,<3",
 "optax>=0.2.6,<0.3", "schwimmbad>=0.4.2,<0.5", "dill>=0.4.0,<0.5", "quadax>=0.2.9,<0.3", "la-forge>=1.1.0,<2", "chainconsumer>=1.2.5,<2",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
#frankenstat_simulations = { path = ".", editable = true }
pta_replicator = { path = "/home/dave/Dropbox/Documents/research/nanograv/codes/pta_replicator", editable = true}
discovery = { path = "/home/dave/Dropbox/Documents/research/nanograv/codes/discovery-nanograv-repo/discovery", editable = true}
enterprise_pulsar = { path = "/home/dave/Dropbox/Documents/research/nanograv/codes/enterprise", editable = true}
hasasia = { path = "/home/dave/Dropbox/Documents/research/nanograv/codes/hasasia", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
astropy = ">=7.1.0,<8"
pyarrow = ">=21.0.0,<22"
setuptools = ">=80.9.0,<81"
bc = ">=1.7.1,<2"
pandas = ">=2.3.1,<3"
scipy = ">=1.16.1,<2"
mpi4py = ">=4.1.0,<5"
ipdb = ">=0.13.13,<0.14"
jupyter = ">=1.1.1,<2"
jupyterlab_vim = ">=4.1.4,<5"
jupyterlab-lsp = ">=5.2.0,<6"
python-lsp-server = ">=1.13.1,<2"
jupyter-ruff = ">=0.3.0,<0.4"
python = "==3.13"

[tool.hatch.metadata]
allow-direct-references = true
[tool.pixi.environments]
gpu = {features = ["gpu"]}

[tool.pixi.feature.gpu]
platforms = ["linux-64", "linux-aarch64"]
system-requirements = { cuda = "12" }

[tool.pixi.feature.gpu.pypi-dependencies]
jax = { version = ">=0.6.0, <1.0", extras = ["cuda12"] }
